# myGui

./: .gitattributes  README.md  meson.build
.cache/clangd/index/: gui.cpp.A280EF25E11A6BD9.idx  gui.cpp.C8C0B16257E10282.idx  gui.h.0E29506710FAC3ED.idx  gui.h.488E4C7AFCE97DAD.idx  helpers.cpp.AE2926C10C80F397.idx  helpers.cpp.C733477C81C4F94F.idx  helpers.h.C446A007AA76178F.idx  helpers.h.EFBEDB00F4675226.idx  main.cpp.35372CE4293A16CA.idx  main.cpp.F12BA0BD2B1FAD74.idx  raylib.h.1762B43B003B6FB8.idx  raylib.h.F95A2B0A3F0D52F0.idx
include/: gui.h  objects.h
src/: gui.cpp  helpers.cpp  main.cpp
